[package]
name = "amm"
version = "0.1.0"
authors = ["jasperdg <jasperdegooijer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
uint = { version = "0.8.5", default-features = false }
serde = "1.0.118"

[dev-dependencies]
near-sdk-sim = "3.1.1"
token = { path = "../token" }