[package]
name = "amm"
version = "0.1.0"
authors = ["jasperdg <jasperdegooijer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", tag="contract_cache_v0" }
uint = { version = "0.8.5", default-features = false }
serde = "1.0.118"

[dev-dependencies]
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", tag="contract_cache_v0" }
token = { path = "../token" }
oracle = { path = "../oracle" }