[package]
name = "amm"
version = "0.1.0"
authors = ["jasperdg <jasperdegooijer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", tag="contract_cache_v0" }
oracle = { git = "https://github.com/fluxprotocol/oracle-monorepo", rev="cbfce655103df7bfbf848bb9e551a0cfcb250e0e" }
uint = { version = "0.8.5", default-features = false }
serde = "1.0.118"

[dev-dependencies]
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", tag="contract_cache_v0" }
token = { path = "../token" }